force-app/main/default/objects/Revature_Music_Store_Roster__c/Revature_Music_Store_Roster__c.object-meta.xml
<CustomObject>
    <label>Revature Music Store Roster</label>
    <nameField>
        <label>Revature Music Store Roster Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Revature Music Store Rosters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>