force-app/main/default/objects/Revature_Music_Store_Roster__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Revature Music Store Rosters</relationshipLabel>
    <relationshipName>Revature_Music_Store_Rosters</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>