force-app/main/default/objects/Revature_Music_Store_Roster__c/fields/Revature_Music_Store__c.field-meta.xml
<CustomField>
    <fullName>Revature_Music_Store__c</fullName>
    <label>Revature Music Store</label>
    <referenceTo>Revature_Music_Store__c</referenceTo>
    <relationshipLabel>Revature Music Store Rosters</relationshipLabel>
    <relationshipName>Revature_Music_Store_Rosters</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>