force-app/main/default/objects/Revature_Music_Store_Roster__c/fields/Sales_Associate_1__c.field-meta.xml
<CustomField>
    <fullName>Sales_Associate_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Associate 1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Revature_Music_Store_Rosters</relationshipName>
    <type>Lookup</type>
</CustomField>